--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "npx tsx --env-file=.env --watch  src/app.ts",
+    "dev": "npx tsx --env-file=.env --watch  src/server.ts",
     "start": "node dist/server.js",
     "build": "tsc"
   },
